<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/ic_perm_phone_msg_black_24dp"
            android:title="@string/information" />
        <item
            android:id="@+id/nav_dialogs"
            android:icon="@drawable/ic_mail_outline_black_24dp"
            android:title="@string/dialogs" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_store_black_24dp"
            android:title="@string/products" />
    </group>

    <item android:title="Cлужебное">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>
