<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:clipToPadding="false">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar_iv"
            android:layout_width="156dp"
            android:layout_height="156dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="50dp"
            android:layout_alignParentTop="true"
            android:src="@color/colorAccent" />

        <ImageButton
            android:id="@+id/add_photo"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_alignBottom="@id/avatar_iv"
            android:layout_alignEnd="@id/avatar_iv"
            android:background="@drawable/rounded_button"
            android:src="@drawable/ic_photo_camera_white_24dp" />

        <TextView
            android:id="@+id/profile_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="36dp"
            android:layout_below="@id/add_photo"
            android:layout_alignParentLeft="true"
            android:text="@string/settings_username"
            android:layout_marginBottom="4dp"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/username_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAlignment="textStart"
            android:text="Максим Вишня"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_below="@id/profile_title_tv"/>

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="moonvishnya@gmail.com"
            android:textAlignment="textStart"
            android:textSize="14sp"
            android:background="@color/white"
            android:layout_below="@id/username_tv"/>


        <TextView
            android:id="@+id/notifications_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/notifications"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="24dp"
            android:background="@color/white"
            android:layout_below="@id/email_tv"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/notifications_switcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/notifications_tv"
            android:layout_alignBottom="@+id/notifications_tv"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="14dp"
            android:text="" />


        <TextView
            android:id="@+id/application_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/notifications_tv"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="4dp"
            android:text="@string/about_application"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/developers_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/developers"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:background="@color/white"
            android:layout_below="@id/application_tv"/>

        <TextView
            android:id="@+id/policy_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/confidentiality_policy"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:background="@color/white"
            android:layout_below="@id/developers_tv"/>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>